trying to fix the loading time of main.cpp

--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="AsciiArt.txt" />
+    <Text Include="Info about main.cpp.txt" />
+    <Text Include="temp.txt" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="version_info.rc" />
