--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -154,6 +154,8 @@
     <Text Include="AsciiArt.txt">
       <Filter>Resources</Filter>
     </Text>
+    <Text Include="Info about main.cpp.txt" />
+    <Text Include="temp.txt" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="version_info.rc">
