--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -158,6 +158,7 @@
     <Text Include="text infos\main-4 copy.txt" />
     <Text Include="text infos\main-5 copy.txt" />
     <Text Include="text infos\project structure.txt" />
+    <Text Include="temp_output.txt" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="version_info.rc">
