--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
@@ -48,9 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="AsciiArt.txt" />
-    <Text Include="main-6 copy.txt" />
-    <Text Include="main-7 copy.txt" />
-    <Text Include="temp_output.txt" />
+    <Text Include="text infos\main-6 copy.txt" />
+    <Text Include="text infos\main-7 copy.txt" />
+    <Text Include="text infos\temp_output.txt" />
     <Text Include="text infos\better output format.txt" />
     <Text Include="text infos\Info about main.cpp.txt" />
     <Text Include="text infos\main-5 copy.txt" />
