feat: implement automatic ASCII art file management system
- Add centralized ASCII art loading with AppData storage
- Automatically copy DefaultAsciiArt.txt to user's AppData folder on first run
- Support multiple file naming conventions (DefaultAsciiArt.txt, Default_Ascii_Art.txt)
- Implement intelligent file search across multiple directory levels (for build folders)
- Enable user customization through persistent AppData location
- Add silent operation mode (no verbose output unless errors occur)
- Simplify main.cpp from 10+ lines to 3 lines for art loading
- Ensure cross-platform compatibility (Windows/Linux/macOS)

BREAKING CHANGE: ASCII art now loads from AppData instead of project directory

--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AsciiArt.cpp" />
+    <ClCompile Include="AsciiArtControlEngine.cpp" />
     <ClCompile Include="CompactAudio.cpp" />
     <ClCompile Include="CompactDisplay.cpp" />
     <ClCompile Include="CompactGPU.cpp" />
