--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj
@@ -47,6 +47,7 @@
     <ClInclude Include="UserInfo.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Art_Collections.txt" />
     <Text Include="DefaultAsciiArt.txt" />
     <Text Include="text infos\Estimated_jsonc.txt" />
     <Text Include="text infos\main 8.txt" />
