--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -115,6 +115,9 @@
     <Text Include="text infos\better output format.txt" />
     <Text Include="text infos\main 8.txt" />
     <Text Include="text infos\Estimated_jsonc.txt" />
+    <Text Include="Art_Collections.txt">
+      <Filter>Resources</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="version_info.rc">
