Add: temporary git pushing types for better workflow

--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -118,6 +118,7 @@
     <Text Include="Art_Collections.txt">
       <Filter>Resources</Filter>
     </Text>
+    <Text Include="text infos\developement_note.txt" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="version_info.rc">
