refactor: better section for naming for compact audio

--- a/project_binary_fetch/binary_fetch_v1/config.json
+++ b/project_binary_fetch/binary_fetch_v1/config.json
@@ -45,12 +45,12 @@
     "free_color": "cyan",
     "percent_color": "cyan"
   },
-  "audio": {
+  "compact_audio": {
     "enabled": true,
-    "bracket_color": "bright_blue",
-    "arrow_color": "bright_red",
-    "device_color": "bright_white",
-    "status_color": "cyan"
+    "bracket_color": "yellow",
+    "arrow_color": "yellow",
+    "device_color": "yellow",
+    "status_color": "yellow"
   },
   "gpu": {
     "enabled": true,
