--- a/project_binary_fetch/binary_fetch_v1/Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Config.json
@@ -159,7 +159,7 @@
       "free_value": "red",
       "used_value": "red",
       "brackets": "red",
-      "~": "red",
+      "~": "green",
       "module_label": "red",
       " : ": "red",
       "capacity": "red",
