bug: found bug on storage secton theme test

--- a/project_binary_fetch/binary_fetch_v1/Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Config.json
@@ -188,21 +188,21 @@
       "show_used_percentage": true,
       "show_file_system": true,
       "show_external_status": true,
-      "storage_type_color": "magenta",
-      "drive_letter_color": "bright_cyan",
-      "used_label_color": "bright_magenta",
-      "used_space_color": "bright_yellow",
-      "total_space_color": "cyan",
-      "used_percentage_color": "bright_red",
-      "file_system_color": "white",
-      "external_text_color": "bright_yellow",
-      "internal_text_color": "bright_cyan",
-      "[": "magenta",
-      "]": "magenta",
-      "(": "bright_cyan",
-      "/": "white",
-      "-": "bright_magenta",
-      "GIB": "bright_yellow"
+      "storage_type_color": "green",
+      "drive_letter_color": "bright_green",
+      "used_label_color": "green",
+      "used_space_color": "bright_green",
+      "total_space_color": "white",
+      "used_percentage_color": "bright_yellow",
+      "file_system_color": "green",
+      "external_text_color": "bright_green",
+      "internal_text_color": "green",
+      "[": "bright_black",
+      "]": "bright_black",
+      "(": "green",
+      "/": "bright_black",
+      "-": "green",
+      "GIB": "white"
     },
     "disk_performance": {
       "header": {
