style: fixed json strucutre

--- a/project_binary_fetch/binary_fetch_v1/config.json
+++ b/project_binary_fetch/binary_fetch_v1/config.json
@@ -151,20 +151,20 @@
       "modules": true
     },
     "colors": {
-      ">>~": "red",
-      "header_title": "red",
-      "-------------------------#": "red",
-      "label": "red",
-      "total_value": "red",
-      "free_value": "red",
-      "used_value": "red",
-      "brackets": "red",
-      "~": "red",
-      "module_label": "red",
-      " : ": "red",
-      "capacity": "red",
-      "type": "red",
-      "speed": "red"
+      ">>~": "blue",
+      "header_title": "bright_magenta",
+      "-------------------------#": "blue",
+      "label": "magenta",
+      "total_value": "bright_blue",
+      "free_value": "bright_cyan",
+      "used_value": "bright_red",
+      "brackets": "bright_black",
+      "~": "cyan",
+      "module_label": "bright_blue",
+      " : ": "bright_black",
+      "capacity": "bright_cyan",
+      "type": "magenta",
+      "speed": "bright_blue"
     }
   },
   "detailed_storage": {
@@ -181,28 +181,30 @@
         "title_color": "blue"
       },
       "show_storage_type": true,
-      "storage_type_color": "blue",
       "show_drive_letter": true,
-      "drive_letter_color": "blue",
       "show_used_label": true,
-      "used_label_color": "blue",
       "show_used_space": true,
-      "used_space_color": "blue",
       "show_total_space": true,
-      "total_space_color": "blue",
       "show_used_percentage": true,
-      "used_percentage_color": "blue",
       "show_file_system": true,
-      "file_system_color": "blue",
       "show_external_status": true,
-      "external_text_color": "blue",
-      "internal_text_color": "blue",
-      "]": "red",
-      "[": "red",
+      "storage_type_color": "green",
+      "drive_letter_color": "bright_green",
+      "used_label_color": "green",
+      "used_space_color": "bright_green",
+      "total_space_color": "white",
+      "used_percentage_color": "bright_yellow",
+      "file_system_color": "green",
+      "external_text_color": "bright_green",
+      "internal_text_color": "green",
+      "[": "bright_black",
+      "]": "bright_black",
       "(": "green",
-      "/": "red",
+      "/": "bright_black",
       "-": "green",
-      "GIB": "green"
+      "used_GIB": "blue",
+      "total_GIB": "blue" 
+
     },
     "disk_performance": {
       "header": {
