refactor(network): fixed network info structure

--- a/project_binary_fetch/binary_fetch_v1/Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Config.json
@@ -287,7 +287,7 @@
     "#-": "blue",
     "~": "blue",
     ":": "blue",
-    "separator_line": "blue",
+    "separator_line": "red",
 
     "header_text_color": "blue",
     "label_color": "blue",
