feat: Add vibrant multi-color themes to all info sections
Replaced monotone cyan themes with rich color palettes across all
sections (os_info, cpu_info, gpu_info, display_info, bios_mb_info,
user_info, performance_info, audio_power_info, network_info).

Each section now uses 7-11 distinct colors for better visual hierarchy
and readability, following the detailed_memory color scheme pattern.

Breaking: Visual appearance changes for all info display sections.

--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -238,7 +238,7 @@
     <None Include="text infos\locations.md" />
     <None Include="text infos\BinaryFetch Community.md" />
     <None Include="Documentation\BinaryFetch documentation.md" />
-    <None Include="Config.json">
+    <None Include="Default_BinaryFetch_Config.json">
       <Filter>Config</Filter>
     </None>
     <None Include="AsciiArt_Documentation.md">
