--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -173,8 +173,6 @@
       "capacity_color": "bright_cyan"
     }
   },
-
-  
   "detailed_memory": {
     "enabled": true,
     "sections": {
@@ -212,7 +210,7 @@
       "header": {
         "show_header": true,
         "line_color": "blue",
-        "title_color": "blue"
+        "title_color": "bright_yellow"
       },
       "show_storage_type": true,
       "show_drive_letter": true,
@@ -223,14 +221,14 @@
       "show_file_system": true,
       "show_external_status": true,
       "storage_type_color": "cyan",
-      "drive_letter_color": "blue",
+      "drive_letter_color": "bright_blue",
       "used_label_color": "magenta",
-      "used_space_color": "cyan",
+      "used_space_color": "bright_cyan",
       "total_space_color": "cyan",
       "used_percentage_color": "bright_yellow",
       "file_system_color": "red",
       "external_text_color": "blue",
-      "internal_text_color": "cyan",
+      "internal_text_color": "bright_cyan",
       "[": "red",
       "]": "red",
       "(": "cyan",
@@ -244,20 +242,20 @@
       "header": {
         "show_header": true,
         "line_color": "blue",
-        "title_color": "blue"
+        "title_color": "bright_yellow"
       },
       "show_drive_letter": true,
-      "drive_letter_color": "blue",
+      "drive_letter_color": "bright_blue",
       "show_read_speed": true,
-      "read_label_color": "blue",
-      "read_speed_color": "blue",
+      "read_label_color": "bright_green",
+      "read_speed_color": "green",
       "show_write_speed": true,
-      "write_label_color": "blue",
-      "write_speed_color": "blue",
+      "write_label_color": "bright_magenta",
+      "write_speed_color": "magenta",
       "show_serial_number": true,
-      "serial_number_color": "blue",
+      "serial_number_color": "cyan",
       "show_external_status": true,
-      "speed_unit_color": "blue",
+      "speed_unit_color": "bright_cyan",
       "]": "red",
       "[": "red",
       "(": "cyan",
@@ -270,33 +268,31 @@
       "header": {
         "show_header": true,
         "line_color": "blue",
-        "title_color": "blue"
+        "title_color": "bright_yellow"
       },
       "show_drive_letter": true,
-      "drive_letter_color": "blue",
+      "drive_letter_color": "bright_blue",
       "show_read_speed": true,
-      "read_label_color": "blue",
-      "read_speed_color": "blue",
+      "read_label_color": "bright_green",
+      "read_speed_color": "green",
       "show_write_speed": true,
-      "write_label_color": "blue",
-      "write_speed_color": "blue",
+      "write_label_color": "bright_magenta",
+      "write_speed_color": "magenta",
       "show_serial_number": true,
-      "serial_number_color": "blue",
+      "serial_number_color": "cyan",
       "show_external_status": true,
-      "speed_unit_color": "blue",
+      "speed_unit_color": "bright_cyan",
       "]": "red",
       "[": "red",
       "(": "green",
       "/": "red",
       "-": "green",
-      "GIB": "green",
+      "GIB": "bright_yellow",
       "|": "green"
     }
   },
-
   "network_info": {
     "enabled": true,
-
     "show_header": true,
     "show_name": true,
     "show_type": true,
@@ -305,27 +301,22 @@
     "show_mac": true,
     "show_upload": true,
     "show_download": true,
-
-    "#-": "blue",
-    "~": "blue",
-    ":": "blue",
+    "#-": "bright_blue",
+    "~": "cyan",
+    ":": "magenta",
     "separator_line": "red",
-
-    "header_text_color": "blue",
-    "label_color": "blue",
-
-    "name_value_color": "blue",
-    "type_value_color": "blue",
-    "ip_value_color": "blue",
+    "header_text_color": "bright_yellow",
+    "label_color": "bright_cyan",
+    "name_value_color": "green",
+    "type_value_color": "bright_green",
+    "ip_value_color": "bright_blue",
     "locale_value_color": "cyan",
-    "mac_value_color": "cyan",
-    "upload_value_color": "blue",
-    "download_value_color": "blue"
+    "mac_value_color": "magenta",
+    "upload_value_color": "bright_red",
+    "download_value_color": "bright_green"
   },
-
   "os_info": {
     "enabled": true,
-
     "show_header": true,
     "show_name": true,
     "show_build": true,
@@ -334,28 +325,22 @@
     "show_uptime": true,
     "show_install_date": true,
     "show_serial": true,
-
-    "#-": "cyan",
-    "~": "cyan",
-    ":": "cyan",
-    "separator_line": "cyan",
-
-    "header_text_color": "cyan",
+    "#-": "bright_cyan",
+    "~": "blue",
+    ":": "magenta",
+    "separator_line": "bright_blue",
+    "header_text_color": "bright_yellow",
     "label_color": "cyan",
-
-    "name_value_color": "cyan",
-    "build_value_color": "cyan",
-    "arch_value_color": "cyan",
-    "kernel_value_color": "cyan",
-    "uptime_value_color": "cyan",
-    "install_date_value_color": "cyan",
-    "serial_value_color": "cyan"
+    "name_value_color": "bright_green",
+    "build_value_color": "green",
+    "arch_value_color": "bright_blue",
+    "kernel_value_color": "magenta",
+    "uptime_value_color": "bright_cyan",
+    "install_date_value_color": "yellow",
+    "serial_value_color": "bright_magenta"
   },
-
-
   "cpu_info": {
     "enabled": true,
-
     "show_header": true,
     "show_brand": true,
     "show_utilization": true,
@@ -368,29 +353,25 @@
     "show_l1_cache": true,
     "show_l2_cache": true,
     "show_l3_cache": true,
-
-    "#-": "cyan",
-    "~": "cyan",
-    ":": "cyan",
-    "%": "cyan",
-    "separator_line": "cyan",
-
-    "header_text_color": "cyan",
-    "label_color": "cyan",
-
-    "brand_value_color": "cyan",
-    "utilization_value_color": "cyan",
-    "speed_value_color": "cyan",
-    "base_speed_value_color": "cyan",
+    "#-": "bright_red",
+    "~": "red",
+    ":": "magenta",
+    "%": "bright_yellow",
+    "separator_line": "bright_red",
+    "header_text_color": "bright_yellow",
+    "label_color": "bright_cyan",
+    "brand_value_color": "bright_green",
+    "utilization_value_color": "bright_red",
+    "speed_value_color": "bright_magenta",
+    "base_speed_value_color": "magenta",
     "cores_value_color": "cyan",
-    "logical_processors_value_color": "cyan",
-    "sockets_value_color": "cyan",
-    "virtualization_value_color": "cyan",
-    "l1_cache_value_color": "cyan",
-    "l2_cache_value_color": "cyan",
-    "l3_cache_value_color": "cyan"
+    "logical_processors_value_color": "bright_cyan",
+    "sockets_value_color": "green",
+    "virtualization_value_color": "bright_blue",
+    "l1_cache_value_color": "yellow",
+    "l2_cache_value_color": "bright_yellow",
+    "l3_cache_value_color": "bright_green"
   },
-
   "gpu_info": {
     "enabled": true,
     "show_header": true,
@@ -403,29 +384,26 @@
     "show_temperature": true,
     "show_cores": true,
     "show_primary_details": true,
-
-    "#-": "cyan",
-    "|->": "cyan",
-    "#->": "cyan",
-    ":": "cyan",
-    "%": "cyan",
+    "#-": "bright_magenta",
+    "|->": "magenta",
+    "#->": "bright_cyan",
+    ":": "blue",
+    "%": "bright_yellow",
     "unit_color": "cyan",
-    "separator_line": "cyan",
-
-    "header_text_color": "cyan",
-    "primary_header_color": "cyan",
-    "gpu_label_color": "cyan",
+    "separator_line": "bright_magenta",
+    "header_text_color": "bright_yellow",
+    "primary_header_color": "bright_green",
+    "gpu_label_color": "bright_cyan",
     "label_color": "cyan",
-    "error_color": "cyan",
-
-    "name_value_color": "cyan",
-    "memory_value_color": "cyan",
-    "usage_value_color": "cyan",
-    "vendor_value_color": "cyan",
-    "driver_value_color": "cyan",
-    "temp_value_color": "cyan",
-    "cores_value_color": "cyan",
-    "freq_value_color": "cyan"
+    "error_color": "bright_red",
+    "name_value_color": "bright_green",
+    "memory_value_color": "bright_blue",
+    "usage_value_color": "bright_red",
+    "vendor_value_color": "green",
+    "driver_value_color": "bright_cyan",
+    "temp_value_color": "bright_yellow",
+    "cores_value_color": "magenta",
+    "freq_value_color": "bright_magenta"
   },
   "display_info": {
     "enabled": true,
@@ -433,21 +411,18 @@
     "show_brand": true,
     "show_resolution": true,
     "show_refresh_rate": true,
-
-    "#-": "cyan",
-    "~": "cyan",
-    ":": "cyan",
-    "unit_color": "cyan",
-    "separator_line": "cyan",
-
-    "header_text_color": "cyan",
-    "error_header_color": "cyan",
+    "#-": "bright_green",
+    "~": "green",
+    ":": "magenta",
+    "unit_color": "bright_cyan",
+    "separator_line": "bright_green",
+    "header_text_color": "bright_yellow",
+    "error_header_color": "bright_red",
     "label_color": "cyan",
-    "error_color": "cyan",
-
-    "brand_value_color": "cyan",
-    "resolution_value_color": "cyan",
-    "refresh_rate_value_color": "cyan"
+    "error_color": "red",
+    "brand_value_color": "bright_cyan",
+    "resolution_value_color": "bright_blue",
+    "refresh_rate_value_color": "bright_magenta"
   },
   "bios_mb_info": {
     "enabled": true,
@@ -457,40 +432,33 @@
     "show_bios_date": true,
     "show_mb_model": true,
     "show_mb_manufacturer": true,
-
-    "#-": "cyan",
-    "~": "cyan",
-    ":": "cyan",
-    "separator_line": "cyan",
-
-    "header_text_color": "cyan",
+    "#-": "bright_blue",
+    "~": "blue",
+    ":": "magenta",
+    "separator_line": "bright_blue",
+    "header_text_color": "bright_yellow",
     "label_color": "cyan",
-
-    "vendor_value_color": "cyan",
-    "version_value_color": "cyan",
-    "date_value_color": "cyan",
-    "model_value_color": "cyan",
-    "mfg_value_color": "cyan"
+    "vendor_value_color": "bright_green",
+    "version_value_color": "bright_cyan",
+    "date_value_color": "yellow",
+    "model_value_color": "bright_magenta",
+    "mfg_value_color": "green"
   },
-
   "user_info": {
     "enabled": true,
     "show_header": true,
     "show_username": true,
     "show_computer_name": true,
     "show_domain": true,
-
-    "#-": "cyan",
-    "~": "cyan",
-    ":": "cyan",
-    "separator_line": "cyan",
-
-    "header_text_color": "cyan",
+    "#-": "bright_magenta",
+    "~": "magenta",
+    ":": "blue",
+    "separator_line": "bright_magenta",
+    "header_text_color": "bright_yellow",
     "label_color": "cyan",
-
-    "username_value_color": "cyan",
-    "computer_name_value_color": "cyan",
-    "domain_value_color": "cyan"
+    "username_value_color": "bright_green",
+    "computer_name_value_color": "bright_cyan",
+    "domain_value_color": "bright_blue"
   },
   "performance_info": {
     "enabled": true,
@@ -500,18 +468,15 @@
     "show_ram_usage": true,
     "show_disk_usage": true,
     "show_gpu_usage": true,
-
-    "#-": "cyan",
-    "~": "cyan",
-    ":": "cyan",
-    "%": "cyan",
-    "separator_line": "cyan",
-
-    "header_text_color": "cyan",
+    "#-": "bright_yellow",
+    "~": "yellow",
+    ":": "magenta",
+    "%": "bright_red",
+    "separator_line": "bright_yellow",
+    "header_text_color": "bright_cyan",
     "label_color": "cyan",
-
-    "uptime_value_color": "cyan",
-    "usage_value_color": "cyan"
+    "uptime_value_color": "bright_green",
+    "usage_value_color": "bright_magenta"
   },
   "audio_power_info": {
     "enabled": true,
@@ -520,22 +485,19 @@
     "show_active_status": true,
     "show_power_info": true,
     "show_power_header": true,
-
-    "#-": "cyan",
+    "#-": "bright_cyan",
     "~": "cyan",
-    "separator_line": "cyan",
-    "bracket_color": "cyan",
-    "unit_color": "cyan",
-
-    "header_text_color": "cyan",
+    "separator_line": "bright_blue",
+    "bracket_color": "magenta",
+    "unit_color": "bright_yellow",
+    "header_text_color": "bright_yellow",
     "label_color": "cyan",
-    "index_color": "cyan",
-    "device_name_color": "cyan",
-    "active_label_color": "cyan",
-
-    "wired_text_color": "cyan",
-    "battery_percent_color": "cyan",
-    "charging_status_color": "cyan",
-    "not_charging_status_color": "cyan"
+    "index_color": "bright_magenta",
+    "device_name_color": "bright_green",
+    "active_label_color": "bright_cyan",
+    "wired_text_color": "green",
+    "battery_percent_color": "bright_yellow",
+    "charging_status_color": "bright_green",
+    "not_charging_status_color": "bright_red"
   }
 }
