feat: implement auto-healing JSON configuration system
Implemented a self-repairing configuration architecture that eliminates user-facing errors from corrupted or missing config files.

## Key Changes

### Auto-Setup System
- Config files now auto-create in `C:\Users\Default\AppData\Local\BinaryFetch\`
- First run automatically copies `Default_BinaryFetch_Config.json` → `BinaryFetch_Config.json`
- Mirrors the proven ASCII art auto-setup pattern from `AsciiArt.cpp`

### Fault Tolerance
- Missing config file: Auto-recreates from defaults
- Corrupted JSON: Graceful fallback with all features enabled
- Deleted config: Silent regeneration on next run
- Invalid color names: Safe default substitution

### User Experience
- Zero configuration required out-of-box
- Users can freely edit config without fear of breaking app
- Reset functionality via simple file deletion
- No error dialogs or crashes from config issues

## Implementation Details

### Location Strategy
- User config: `C:\Users\Default\AppData\Local\BinaryFetch\BinaryFetch_Config.json`
- Default template: `Default_BinaryFetch_Config.json` (bundled with executable)
- Directory creation handled automatically with proper permissions

### Loading Pipeline
1. Check if user config exists
2. If not found → copy from default template
3. Load config with try-catch error handling
4. On parse failure → continue with safe defaults
5. All helper functions use null-safety patterns

### Code Changes
- Added config auto-setup logic in `main()` before config parsing (lines 90-120)
- Changed config loading from

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -30,7 +30,7 @@
     "show_threads": true,
     "show_clock": true,
     "colors": {
-      "[cpu]": "red",
+      "[CPU]": "blue",
       "(": "red",
       ")": "red",
       "->": "red",
