Add: documentation of standalone json config

--- a/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
+++ b/project_binary_fetch/binary_fetch_v1/binary_fetch_v1.vcxproj.filters
@@ -238,5 +238,8 @@
     <None Include="AsciiArt_Documentation.md">
       <Filter>Resources</Filter>
     </None>
+    <None Include="Standalone Json File management.md">
+      <Filter>Resources</Filter>
+    </None>
   </ItemGroup>
 </Project>
