Refactor: set the default color of detailed memory to  white

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -258,7 +258,7 @@
       "total_value": "bright_blue",
       "free_value": "bright_cyan",
       "used_value": "bright_red",
-      "brackets": "bright_black",
+      "brackets": "red",
       "~": "cyan",
       "module_label": "bright_blue",
       " : ": "bright_black",
