--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -89,10 +89,10 @@
     "show_threads": true,
     "show_clock": true,
     "colors": {
-      "[CPU]": "blue",
+      "CPU": "blue",
       "(": "red",
       ")": "red",
-      "->": "red",
+      "CPU_:": "red",
       "name_color": "red",
       "core_color": "red",
       "thread_color": "red",
