feat(os): add emoji indicator for operating system info

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -70,7 +70,9 @@
     "show_build": true,
     "show_arch": true,
     "show_uptime": true,
+    "show_emoji": true,
     "colors": {
+      "emoji_color":"green",
       "OS": "red",
       "(": "blue",
       ")": "blue",
