feat(cpu): add emoji indicator for CPU information

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -90,7 +90,9 @@
     "show_cores": true,
     "show_threads": true,
     "show_clock": true,
+    "show_emoji": true,
     "colors": {
+      "emoji_color": "green",
       "CPU": "blue",
       "(": "red",
       ")": "red",
