feat(gpu): add emoji indicator for GPU details

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -112,7 +112,9 @@
     "show_usage": true,
     "show_vram": true,
     "show_freq": true,
+    "show_emoji": true,
     "colors": {
+      "emoji_color": "green",
       "GPU": "blue",
       "(": "yellow",
       ")": "yellow",
