feat(display): add emoji indicator for display information

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -135,7 +135,9 @@
     "show_scale": true,
     "show_upscale": false,
     "show_refresh": true,
+    "show_emoji": true,
     "colors": {
+      "emoji_color": "green",
       "Display": "red",
       "Display_:": "red",
       "header_text": "red",
