feat(compact-time): align compact time output with emoji UI system

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -7,6 +7,8 @@
   },
   "compact_time": {
     "enabled": true,
+    "show_emoji": true,
+    "emoji_color": "yellow",
     "time_section": {
       "enabled": true,
       "show_label": true,
