refactor(display): replace header/index with per-display combined banner
- Removed standalone Display Info header and display index output
- Introduced a single combined banner per display:
  "#- Display N --------------------------------------------#"
- Made the display banner fully JSON-driven:
  - Toggleable via show_display_banner
  - Customizable colors for:
    - banner prefix ("#-")
    - banner text ("Display N")
    - banner separator line
- Simplified layout to reduce vertical noise and improve readability
- Preserved existing field rendering logic (name, resolution, scaling, DSR, etc.)
- Output now scales cleanly for multi-monitor setups and matches neofetch-style UX

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -510,7 +510,7 @@
   "display_info": {
     "enabled": true,
 
-    "show_header": true,
+    "show_display_banner": true,
     "show_display_index": false,
     "show_name": true,
     "show_applied_resolution": true,
@@ -519,6 +519,8 @@
     "show_scaling": true,
     "show_upscale": true,
     "show_dsr": true,
+    "display_banner_text": "blue",
+    "display_banner_line": "red",
 
     "colors": {
       "#-": "blue",
@@ -559,8 +561,8 @@
       "dsr_brackets_color": "blue",
       "dsr_type_color": "cyan"
     }
-  
-},
+
+  },
   "bios_mb_info": {
     "enabled": true,
     "show_header": true,
