style(storage): set default storage section theme to cyberpunk

--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -322,7 +322,7 @@
       "show_external_status": true,
       "storage_type_color": "cyan",
       "drive_letter_color": "bright_blue",
-      "used_label_color": "magenta",
+      "used_label_color": "red",
       "used_space_color": "bright_cyan",
       "total_space_color": "cyan",
       "used_percentage_color": "bright_yellow",
@@ -347,11 +347,11 @@
       "show_drive_letter": true,
       "drive_letter_color": "bright_blue",
       "show_read_speed": true,
-      "read_label_color": "bright_green",
-      "read_speed_color": "green",
+      "read_label_color": "cyan",
+      "read_speed_color": "red",
       "show_write_speed": true,
-      "write_label_color": "bright_magenta",
-      "write_speed_color": "magenta",
+      "write_label_color": "cyan",
+      "write_speed_color": "red",
       "show_serial_number": true,
       "serial_number_color": "cyan",
       "show_external_status": true,
@@ -373,11 +373,11 @@
       "show_drive_letter": true,
       "drive_letter_color": "bright_blue",
       "show_read_speed": true,
-      "read_label_color": "bright_green",
-      "read_speed_color": "green",
+      "read_label_color": "cyan",
+      "read_speed_color": "red",
       "show_write_speed": true,
-      "write_label_color": "bright_magenta",
-      "write_speed_color": "magenta",
+      "write_label_color": "cyan",
+      "write_speed_color": "red",
       "show_serial_number": true,
       "serial_number_color": "cyan",
       "show_external_status": true,
